--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 </head>
 
 <body>
+    <div id="NUMBERS">
+
+    </div>
+
+    <script>
+    window.onload = () => {
+        // To do: show number of NUMBERS div
+        console.log("onload");
+    }
+    </script>
 </body>
 
 </html>
