--- a/index.html
+++ b/index.html
@@ -14,13 +14,30 @@
     </div>
 
     <script>
-    window.onload = () => {
-    var lottoNumbers = [];
-    while (lottoNumbers.length<6) {
-        var no = Math.round(Math.random()*45);
-        if( lottoNumbers.indexOf(no) === -1 ) lottoNumbers.push(no);
+    let genNumbers = () => {
+        let lottoNumbers = [];
+        while (lottoNumbers.length<6) {
+            let no = Math.round(Math.random()*45);
+            if ( lottoNumbers.indexOf(no) === -1 ) lottoNumbers.push(no);
+        }
+        return lottoNumbers;
     }
-    document.getElementById("NUMBERS").innerHTML = lottoNumbers.join(" ");
+    let checkLogic1 = () => {
+        // TODO feature/checkLogic1
+    }
+    let checkLogic2 = () => {
+        // TODO feature/checkLogic2
+    }
+    window.onload = () => {
+        let lottoNumbers = genNumbers();
+
+        // 23,24,25 과 간이 연속으로 3개의 숫자가 나오지 않게 하자!
+        while( checkLogic1(lottoNumbers) ) lottoNumbers = genNumbers();
+
+        // 11,15,17 과 같이 같은 10의 자리수에 3개가 나오지 않게 하자!
+        while( checkLogic2(lottoNumbers) ) lottoNumbers = genNumbers();
+
+        document.getElementById("NUMBERS").innerHTML = lottoNumbers.join(" ");
     }
     </script>
 </body>
