hotfix to add parameter numbers

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         }
         return lottoNumbers;
     }
-    let checkLogic1 = () => {
+    let checkLogic1 = (numbers) => {
     for(var i=0; i<numbers.length; i++){
         var no = numbers[i];
         if( numbers.indexOf(no+1)>=0 && numbers.indexOf(no+2)>=0 ) return true;
