--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>로또번호 추첨기</title>
-<style>
-/* Add style sheet */
-</style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -51,7 +49,11 @@
         // 11,15,17 과 같이 같은 10의 자리수에 3개가 나오지 않게 하자!
         while( checkLogic2(lottoNumbers) ) lottoNumbers = genNumbers();
 
-        document.getElementById("NUMBERS").innerHTML = lottoNumbers.join(" ");
+        var html_lotto = "";
+        for(var i=0; i<lottoNumbers.length; i++){
+         html_lotto += '<b>'+ lottoNumbers[i] +'</b> ';
+         }
+         document.getElementById("NUMBERS").innerHTML = html_lotto;
     }
     </script>
 </body>
