--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     };
 
     window.onload = () => {
+// ToDo: 5번 추첨하도록 수정!
         let lottoNumbers = genNumbers();
 
         // 23,24,25 과 간이 연속으로 3개의 숫자가 나오지 않게 하자!
